--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+          <excludes>
+          	<exclude>./src/com/travis/Test/JunitTestClass.java</exclude>
+          </excludes>
         </configuration>
       </plugin>
     </plugins>
