--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: java
-script: mvn test -f ./src/com/travis/Test/JunitTestClass.java
+script: mvn test -f src/com/travis/Test/JunitTestClass.java
